mission moto added

--- a/index1.html
+++ b/index1.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
         </div>
-
+        
         <div class="row">
             <div class="col l3 m12 s12 center" style="height: 250px;display: flex;flex-direction: column;justify-content: center">
                 <p class="font18 bold">Our Mission</p>
@@ -116,11 +116,27 @@
                 </div>
             </div>
         </div>
+
+        <div class="container">
+            <div id="test" style="position:relative;display: flex;justify-content: left" class="font18 bold">
+                <pre class="rollingText">Adopt </pre> 
+                <pre class="rollingText">Poor </pre>
+                <pre class="rollingText">Farmers </pre>
+                <pre class="rollingText">and </pre>
+                <pre class="rollingText">support </pre>
+                <pre class="rollingText">them </pre>
+                <pre class="rollingText">towards </pre>
+                <pre class="rollingText">Sustainable </pre>
+                <pre class="rollingText">Agricultural </pre>
+                <pre class="rollingText">Development. </pre>
+                <div id="bar" style="height:50px;width: 50px;position: absolute;">
+                    <img src="images/svg/tractor.svg" height="50px" width="50px"/>
+                </div>
+            </div>
+        </div>
+
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
         <script type="text/javascript" src="./js/pageBuilder.js"></script>
-        <script>
-
-        </script>
     </body>
 </html>
