Helping us section added

--- a/index1.html
+++ b/index1.html
@@ -149,24 +149,76 @@
         </div>
         <!--Mission section ends here-->
         
-        <div id="parallaxCount" >
-            <div class="container margintop20 whiteText" style="padding-top:100px;padding-bottom: 50px;">
-                <div class="row">
-                    <div class="col l4 m4 s12 center" style="padding-bottom: 20px;">
-                        <p id="familyCount" class="font40">64+</p>
-                        <div class="font18">Family Benefited</div>
+        <!--Helping Us section starts here-->
+        <div id="joinUs">
+            <div class="container">
+                <p class="font18 whiteText bold wordSpace10 paddingtop10 center letterSpace1">How Can You Help Us !!!</p>
+                <div class="hrStyle1" ></div>
+                <div class="row paddingBottom50 paddingTop50">
+                    <div class="col l4 m6 s12 center marginBotton30">
+                        <div class="container">
+                            <div class="helpingBox">
+                                <div class="helpingBoxTopContent">
+                                    <img src="./images/svg/charity.svg" height="90" width="100">
+                                    <p class="font18 bold helpingText">Become Volunteer</p>
+                                </div>
+                                <div class="padding20 center">
+                                    <a id="joinUsBtn" class="waves-effect waves-light btn">Join Us</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col l4 m4 s12 center" style="padding-bottom: 20px;">
-                        <p id="volunteersCount" class="font40">100+</p>
-                        <div class="font18">Volunteers</div>
+                    <div class="col l4 m6 s12 center marginBotton30">
+                        <div class="container">
+                            <div class="helpingBox">
+                                <div class="helpingBoxTopContent">
+                                    <img src="./images/svg/donation.svg" height="90" width="100">
+                                    <p class="font18 bold helpingText">Become Donator</p>
+                                </div>
+                                <div class="padding20 center">
+                                    <a id="DonateNowBtn" class="waves-effect waves-light btn">Donate Now</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col l4 m4 s12 center">
-                        <p id="fundsCount" class="font40">100000+</p>
-                        <div class="font18">Funds raised</div>
+                    <div class="col l4 m12 s12 center marginBotton30">
+                        <div class="container">
+                            <div class="helpingBox">
+                                <div class="helpingBoxTopContent">
+                                    <img src="./images/svg/adopt.svg" height="90" width="100">
+                                    <p class="font18 bold helpingText">Adopt Farmer</p>
+                                </div>
+                                <div class="padding20 center">
+                                    <a id="AdoptNowBtn" class="waves-effect waves-light btn">Adopt Now</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <!--Helping Us section ends here-->
+
+        <!--Parallax stats section starts here -->
+        <div id="parallaxCount" style="margin-top: -20px;">
+            <div class="container whiteText" style="padding-top:100px;padding-bottom: 50px;">
+                <div class="row">
+                    <div class="col l4 m4 s12 center" style="padding-bottom: 20px;">
+                        <p id="familyCount" class="font40">64+</p>
+                        <div class="font18 bold">Family Benefited</div>
+                    </div>
+                    <div class="col l4 m4 s12 center" style="padding-bottom: 20px;">
+                        <p id="volunteersCount" class="font40">100+</p>
+                        <div class="font18 bold">Volunteers</div>
+                    </div>
+                    <div class="col l4 m4 s12 center">
+                        <p id="fundsCount" class="font40">100000+</p>
+                        <div class="font18 bold">Funds raised</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Parallax stats section ends here -->
 
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
