Our Services section aded

--- a/index1.html
+++ b/index1.html
@@ -198,6 +198,35 @@
             </div>
         </div>
         <!--Helping Us section ends here-->
+        
+        <!--Services section starts-->
+        <div class="container paddingBottom50 paddingTop50">
+            <div class="row">
+                <div class="col l6 m6 s12 center marginBotton50">
+                    <div class="container">
+                        <div class="animateLeft" class="ourServicesContainerProps">
+                            <img src="images/processCover.png" width="100%" height="240px" class="ourProcessImgProps">
+                            <div class="padding40 ourProcessContentProps">
+                                <p class="font18 bold"> Our Process</p>
+                                <a id="processBtn" class="waves-effect waves-light btn">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col l6 m6 s12 center">
+                    <div class="container">
+                        <div class="animateRight" class="ourServicesContainerProps">
+                            <img src="images/ourFarmers.png" width="100%" height="240px" class="ourFarmersImgProps">
+                            <div class="padding40 ourFarmesContainerProps">
+                                <p class="font18 bold"> Our Farmers</p>
+                                <a id="processBtn" class="waves-effect waves-light btn">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Services section ends-->
 
         <!--Parallax stats section starts here -->
         <div id="parallaxCount" style="margin-top: -20px;">
