--- a/index1.html
+++ b/index1.html
@@ -229,46 +229,56 @@
         <!--Services section ends-->
 
         <div style="background-color:black;">
-                <div class="row" style="min-height: 600px;">
-                    <div class="col l3 m3 s12 hide-on-small-only" style="display: flex;justify-content: center;text-align: center;height:500px;align-items: center;flex-direction: column">
-                        <p class="font40 bold whiteText letterSpace1" id="GalleryName">Gallery</p>
-                        <a class="waves-effect waves-light btn white" style="border-radius: 20px;"><span style="color:black">More Images</span></a>
-                        <!-- <a id="" style="border:2px solid black;border-radius: 20px;color:black;background-color: white;box-shadow: 0px 0px 20px 5px white;" class="waves-effect waves-light btn">All Images</a> -->
+            <div class="row" style="min-height: 600px;">
+                <div class="col l3 m3 s12 hide-on-small-only" style="display: flex;justify-content: center;text-align: center;height:500px;align-items: center;flex-direction: column">
+                    <p class="font40 bold whiteText letterSpace1" id="GalleryName">Gallery</p>
+                    <a class="waves-effect waves-light btn white" style="border-radius: 20px;"><span style="color:black">More Images</span></a>
+                    <!-- <a id="" style="border:2px solid black;border-radius: 20px;color:black;background-color: white;box-shadow: 0px 0px 20px 5px white;" class="waves-effect waves-light btn">All Images</a> -->
+                </div>
+                <div class="col l9 m9 s12" style="margin-top:50px;">
+                    <div class="row hide-on-med-and-up">
+                        <div class="s12">
+                            <p class="font24 bold whiteText letterSpace1 center">Gallery</p>
+                        </div>
                     </div>
-                    <div class="col l9 m9 s12" style="margin-top:50px;">
-                        <div class="row hide-on-med-and-up">
-                            <div class="s12">
-                                <p class="font24 bold whiteText letterSpace1 center">Gallery</p>
-                            </div>
+                    <div class="row">
+                        <div class="col l12 s12 m12 center" style="display:flex;justify-content: center">
+                                <a class="waves-effect waves-light btn white"><span style="color:black">All</span></a>
+                                <a class="waves-effect waves-light btn white"><span style="color:black">Recent</span></a>
                         </div>
-                        <div class="row">
-                            <div class="col l12 s12 m12 center" style="display:flex;justify-content: center">
-                                    <a class="waves-effect waves-light btn white"><span style="color:black">All</span></a>
-                                    <a class="waves-effect waves-light btn white"><span style="color:black">Recent</span></a>
-                            </div>
+                    </div>
+                    <div class="row paddingTop50">
+                        <div class="col l2 m2 s2 center" style="height: 300px;display: flex;align-items: center;justify-content: center"> 
+                            <a id="prevImg" class="btn-floating btn-large" style="background-color: white">
+                                <i id="missionArrow" class="large material-icons" style="color:black;">arrow_back</i>
+                            </a>
                         </div>
-                        <div class="row paddingTop50">
-                            <div class="col l2 m2 s2 center" style="height: 300px;display: flex;align-items: center"> 
-                                <a id="missionButton" class="btn-floating btn-large" style="background-color: white">
-                                    <i id="missionArrow" class="large material-icons" style="color:black;">arrow_back</i>
-                                </a>
+                        <div id="gallery" class="col l8 m8 s8 center" style="position:relative;display: flex;justify-content: center;height: 300px;top:70px">
+                            <div class="gallery-image red" style="position: absolute;height:300px;width: 80%;transform: rotate(0deg);z-index:10;box-shadow:0px 0px 10px 0px black;">
                             </div>
-                            <div class="col l8 m8 s8 center" style="position:relative;display: flex;justify-content: center;height: 300px">
-                                <div style="position: absolute;height:300px;width: 80%;background-color: white;border: 3px solid greenyellow;transform: rotate(-5deg)">
-                                </div>
-                                <div style="position: absolute;height:300px;width: 80%;background-color: white;transform: rotate(5deg);border: 3px solid greenyellow">
-                                </div>
-                                <div style="position: absolute;height:300px;width: 80%;background-color: white;transform: rotate(0deg);border: 3px solid greenyellow">
-                                </div>
+                            <div class="gallery-image blue" style="position: absolute;height:300px;width: 75%;transform: rotate(0deg);top:-20px;z-index:9;box-shadow:0px 0px 10px 1px black;">
                             </div>
-                            <div class="col l2 m2 s2 center" style="height: 300px;display: flex;align-items: center"> 
-                                <a id="missionButton" class="btn-floating btn-large" style="background-color: white">
-                                    <i id="missionArrow" class="large material-icons" style="color:black;">arrow_forward</i>
-                                </a>
+                            <div class="gallery-image green" style="position: absolute;height:300px;width: 70%;transform: rotate(0deg);top:-40px;z-index:8;box-shadow:0px 0px 10px 1px black;">
                             </div>
+                            <div class="gallery-image yellow" style="position: absolute;height:300px;width: 65%;transform: rotate(0deg);top:-60px;z-index:7;box-shadow:0px 0px 10px 1px black;">
+                            </div>
+                            <div class="gallery-image orange" style="position: absolute;height:300px;width: 60%;transform: rotate(0deg);top:-80px;z-index:6;box-shadow:0px 0px 10px 1px black;">
+                            </div>
+                            <div class="gallery-image grey" style="position: absolute;height:300px;width: 55%;transform: rotate(0deg);top:-100px;z-index:5;box-shadow:0px 0px 10px 1px black;">
+                            </div>
+                            <!-- <div style="position: absolute;height:300px;width: 80%;background-color: white;transform: rotate(5deg);border: 3px solid greenyellow">
+                            </div>
+                            <div style="position: absolute;height:300px;width: 80%;background-color: white;transform: rotate(0deg);border: 3px solid greenyellow">
+                            </div> -->
+                        </div>
+                        <div class="col l2 m2 s2 center" style="height: 300px;display: flex;align-items: center"> 
+                            <a id="nextImg" class="btn-floating btn-large" style="background-color: white" >
+                                <i id="missionArrow" class="large material-icons" style="color:black;" >arrow_forward</i>
+                            </a>
                         </div>
                     </div>
                 </div>
+            </div>
         </div>
 
         <!--Parallax stats section starts here -->
@@ -294,6 +304,7 @@
 
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+        <script type="text/javascript" src="./js/ImageData.js"></script>
         <script type="text/javascript" src="./js/pageBuilder.js"></script>
     </body>
 </html>
