--- a/index1.html
+++ b/index1.html
@@ -281,7 +281,14 @@
         
         <div class="container">
             <div class="row marginBotton50 margintop40">
-                <div class="col l3 m3 " id="eventTabs" style="display: flex;flex-direction: column;align-items: center;padding-top:20px">
+                <div class="col m12 s12 hide-on-large-only">
+                    <div style="display: flex;justify-content: center">
+                        <a class="waves-effect waves-light btn  tabby" id="allImages" style="border-top-left-radius: 25px;border-bottom-left-radius: 25px;background-color: #d6d7d6"><span style="color:black">All</span></a>
+                        <a class="waves-effect waves-light btn  tabby" id="oldImages" ><span style="color:black">Old</span></a>
+                        <a class="waves-effect waves-light btn  tabby" id="recentImages" style="border-top-right-radius: 25px;border-bottom-right-radius: 25px;"><span style="color:black">Recent</span></a>
+                    </div>
+                </div>
+                <div class="col l3 hide-on-med-and-down" id="eventTabs" style="display: flex;flex-direction: column;align-items: center;padding-top:20px">
                     <a class="waves-effect waves-light btn-large bold eventsBtn" id="allEvents">All Events</a>
                     <div style="text-align:center;width:10px;height:50px;background-color: chocolate">
                     </div>
@@ -290,20 +297,28 @@
                     </div>
                     <a class="waves-effect waves-light btn-large bold eventsBtn" id="pastEvents">Past Events</a>
                 </div>
-                <div class="col l9 m9">
+                <div class="col l9 m10 s10">
                     <div class="row">
                         <div id="eventsHolders" style="min-height: 320px;">
                         </div>
                     </div>
-                    <div class="row center">
-                        <div style="display: flex;justify-content: center;">
-                            <a id="prevEvent" class="waves-effect waves-light btn-large white" style="border-top-left-radius: 40px;border-bottom-left-radius: 40px;box-shadow: 0px 0px 5px 0px black;">
+                    <div class="row center hide-on-med-and-down">
+                        <div class="col l6 m6 right-align">
+                            <a id="prevEvent" class="waves-effect waves-light btn-large white" style="border-top-left-radius: 40px;border-bottom-left-radius: 40px;box-shadow: 0px 0px 5px 0px black;width: fit-content">
                                 <i class="large material-icons" style="color:black;" >chevron_left</i>
                             </a>
-                            <a id="nextEvent" class="waves-effect waves-light btn-large white" style="border-top-right-radius: 40px;border-bottom-right-radius: 40px;box-shadow: 0px 0px 5px 0px black;">
+                        </div>
+                        <div class="col l6 m6 left-align">
+                            <a id="nextEvent" class="waves-effect waves-light btn-large white" style="border-top-right-radius: 40px;border-bottom-right-radius: 40px;box-shadow: 0px 0px 5px 0px black;width: fit-content">
                                 <i class="large material-icons" style="color:black;" >chevron_right</i>
                             </a>
                         </div>
+                    </div>
+                </div>
+                <div class="col m2 s2 hide-on-large-only">
+                    <div style="display: flex;flex-direction: column;justify-content: center;align-items: center;height:inherit;padding-left: 30px;height: -webkit-fill-available">
+                        <a id="prevEvent" class="btn-floating btn-large waves-effect waves-light red" ><i class="material-icons">add</i></a>
+                        <a id="nextEvent" class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
                     </div>
                 </div>
             </div>
@@ -333,17 +348,17 @@
         <script id="eventsLoader" type="text/x-handlebars-template">
             {{#each events}}
                 {{#ifEqual @index }}
-                    <div class="col l6 m6 center eventCard" style="min-height: 320px;box-shadow:0px 0px 10px 0px black;border-radius: 20px;width: 45%;margin-left:30px;">
+                    <div class="col l5 m12 s12 center eventCard" style="min-height: 320px;box-shadow:0px 0px 10px 0px black;border-radius: 20px;margin-left: 30px;margin-bottom: 15px;">
                 {{else}}
-                    <div class="col l6 m6 center eventCard" style="display:none;min-height: 320px;box-shadow:0px 0px 10px 0px black;border-radius: 20px;width: 45%;margin-left:30px;">
+                    <div class="col l5 m12 s12 center eventCard" style="display:none;min-height: 320px;box-shadow:0px 0px 10px 0px black;border-radius: 20px;margin-left: 30px">
                 {{/ifEqual}}
                         <div class="row">
-                            <div class="col l6 m6">
-                                <img class="padding15 margintop10" src="./images/events2.jpg" width="110%" height="170px">
+                            <div class="col l6 m6 s12">
+                                <img class="padding15 margintop10" src="./images/events2.jpg" width="100%" height="170px">
                             </div>
-                            <div class="col l6 m6">
+                            <div class="col l6 m6 s12">
                                 <p class="bold font18 center">{{name}}</p>
-                                <p class="left-align" style="height:110px; text-overflow:ellipsis;overflow:scroll"> {{brief}}</p>
+                                <p class="left-align center" style="max-height:110px; text-overflow:ellipsis;overflow:scroll"> {{brief}}</p>
                             </div>
                         </div>
                         <div class="" style="display: flex;margin-top:-20px;flex-direction: column;padding-left:15px;">
@@ -355,7 +370,7 @@
                                     <i style="padding-top:3px;" class="material-icons">access_time</i>
                                     <span style="word-break: break-all;padding-left:10px;padding-top:3px;"> {{time}}</span>
                             </div>
-                            <div class="center margintop10">
+                            <div class="center margintop10" style="margin-bottom:15px;">
                                 <a id="processBtn" class="waves-effect waves-light btn">Read More</a>
                             </div>
                         </div>
