--- a/index1.html
+++ b/index1.html
@@ -152,7 +152,7 @@
         <!--Helping Us section starts here-->
         <div id="joinUs">
             <div class="container">
-                <p class="font18 whiteText bold wordSpace10 paddingtop10 center letterSpace1">How Can You Help Us !!!</p>
+                <p class="font18 whiteText bold wordSpace10 paddingtop10 center letterSpace1 helpUs">How Can You Help Us !!!</p>
                 <div class="hrStyle1" ></div>
                 <div class="row paddingBottom50 paddingTop50">
                     <div class="col l4 m6 s12 center marginBotton30">
@@ -199,13 +199,20 @@
         </div>
         <!--Helping Us section ends here-->
         
-        <!--Services section starts-->
-        <div class="container paddingBottom50 paddingTop50">
+        <div id="services" class="container paddingBottom100">
             <div class="row">
-                <div class="col l6 m6 s12 center marginBotton50">
-                    <div class="container">
-                        <div class="animateLeft" class="ourServicesContainerProps">
-                            <img src="images/processCover.png" width="100%" height="240px" class="ourProcessImgProps">
+                <div class="col l6 m12 s12">
+                    <p class="font24 bold">Our Process</p>
+                    <div class="hrStyle2">
+                    </div>
+                    <ul id="ourProcessList">
+                        <li class="ourProcessListItem">NGO Team visits the supported Farmers on weekly basis and on average each farmer will be reviewed monthly once.</li>
+                        <li class="ourProcessListItem">Conducting Monthly Farmers meet to identify best performing farmers and cross train other farmers.</li>
+                        <li class="ourProcessListItem">Provide guidance to add more income generating sources.</li>
+                    </ul>
+                    <div class="margintop40 customCenter paddingBottom20">
+                        <div class="alcatel ourServicesContainerProps">
+                            <img src="images/processCover.png" width="99%" height="240px" class="ourProcessImgProps">
                             <div class="padding40 ourProcessContentProps">
                                 <p class="font18 bold"> Our Process</p>
                                 <a id="processBtn" class="waves-effect waves-light btn">Read More</a>
@@ -213,9 +220,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="col l6 m6 s12 center">
-                    <div class="container">
-                        <div class="animateRight" class="ourServicesContainerProps">
+                <div class="col l6 m12 s12">
+                    <p class="font24 bold">Our Farmers</p>
+                    <div class="hrStyle2">
+                    </div>
+                    <ul id="ourProcessList">
+                        <li class="ourProcessListItem">Few of the donors have expressed interest in doing ‘Godanam’ (Donating a Cow). We have identified 3 prospective farmers who are able to use the cow for natural farming – please contact us if you are interested.</li>
+                        <li class="ourProcessListItem">We have identified 12 new prospective and needy farmers that need your continued support.</li>
+                    </ul>
+                    <div class="margintop40 customCenter">
+                        <div id="ourFarmersContainer" class="alcatel ourServicesContainerProps">
                             <img src="images/ourFarmers.png" width="100%" height="240px" class="ourFarmersImgProps">
                             <div class="padding40 ourFarmesContainerProps">
                                 <p class="font18 bold"> Our Farmers</p>
@@ -226,6 +240,7 @@
                 </div>
             </div>
         </div>
+        <!--Services section starts-->
         <!--Services section ends-->
 
         <!--Galery section starts here -->
@@ -316,7 +331,7 @@
                     </div>
                 </div>
                 <div class="col m2 s2 hide-on-large-only">
-                    <div style="display: flex;flex-direction: column;justify-content: center;align-items: center;height:inherit;padding-left: 30px;height: -webkit-fill-available">
+                    <div style="display: flex;flex-direction: column;justify-content: center;align-items: center;height:inherit;padding-left: 30px;height: 650px;">
                         <a id="prevEvent" class="btn-floating btn-large waves-effect waves-light red" ><i class="material-icons">add</i></a>
                         <a id="nextEvent" class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
                     </div>
