UI issues fixed

--- a/index1.html
+++ b/index1.html
@@ -22,7 +22,7 @@
             <div class="col l3 m12 s12 center">
                 <img class="margintop10" src="./images/logo.png" height="80px">
             </div>
-            <div class="col l3 m4 s12 center">
+            <div class="col l3 m6 s12 center">
                 <span>
                     <img class="iconBorder padding5 margintop20" src="images/svg/address1.svg" height="50px">
                 </span>
@@ -30,7 +30,7 @@
                     19216 Robin Perch Ln, Tampa FL 33647
                 </span>
             </div>
-            <div class="col l3 m4 s12 center">
+            <div class="col l3 m6 s12 center">
                 <span>
                     <img class="iconBorder padding5 margintop20" src="images/svg/envelope.svg" height="50px">
                 </span>
@@ -38,7 +38,7 @@
                      volunteers@adoptfarmer.org
                 </span>
             </div>
-            <div class="col l3 m4 s12 center">
+            <div class="col l3 m12 s12 center marginBotton30">
                 <span>
                     <img class="iconBorder padding5 margintop20" src="images/svg/phone.svg" height="50px">
                 </span>
@@ -50,25 +50,25 @@
         <!--Advertiser Header ends here-->
 
         <!--Mobile Header starts here-->
-        <div id="mobileHeader" class="flex hide blackBackground whiteText">
-                <p class="font18 headerText">Mission</p>
-                <p class="font18 headerText">Process</p>
-                <p class="font18 headerText">Farmer</p>
-                <p class="font18 headerText">Gallery</p>
-                <p class="font18 headerText">Events</p>
-                <p class="font18 headerText">Blogs</p>
+        <div id="mobileHeader" class="flex hide" style="background-color: white;opacity: 0.95;">
+                <p name="Mission" class="font18 headerText">Mission</p>
+                <p name="Process" class="font18 headerText">Process</p>
+                <p name="Farmer" class="font18 headerText">Farmer</p>
+                <p name="Gallery" class="font18 headerText">Gallery</p>
+                <p name="Events" class="font18 headerText">Events</p>
+                <p name="Blogs" class="font18 headerText">Blogs</p>
         </div>
         <!--Mobile Header ends here-->
 
         <!--medium and desktop header starts here-->
         <div class="container" id="header2">
             <div class="flex blackBackground whiteText roundedCorners relative top-50 zindex1" style="flex-wrap: wrap">
-                <p class="font18 headerText">Mission</p>
-                <p class="font18 headerText">Process</p>
-                <p class="font18 headerText">Farmer</p>
-                <p class="font18 headerText">Gallery</p>
-                <p class="font18 headerText">Events</p>
-                <p class="font18 headerText">Blogs</p>
+                <p name="Mission" class="font18 headerText">Mission</p>
+                <p name="Process" class="font18 headerText">Process</p>
+                <p name="Farmer"class="font18 headerText">Farmer</p>
+                <p name="Gallery" class="font18 headerText">Gallery</p>
+                <p name="Events" class="font18 headerText">Events</p>
+                <p name="Blogs" class="font18 headerText">Blogs</p>
             </div>
         </div>
         <!--medium and desktop header ends here-->
@@ -87,7 +87,7 @@
             <div class="whiteText font40 heroText bold">
                 <div id="slidingTextAlignment">
                     <p class="center" id="slidingText"></p>
-                    <a id="heroButton" href="#" class="waves-effect waves-light btn center">Donate</a>
+                    <a id="heroButton" href="https://www.paypal.me/AdoptAFarmer" onclick="dummy()" class="waves-effect waves-light btn center">Donate</a>
                 </div>
             </div>
         </div>
@@ -213,7 +213,7 @@
                         <li class="ourProcessListItem">Provide guidance to add more income generating sources.</li>
                     </ul>
                     <div class="margintop40 customCenter paddingBottom20">
-                        <div class="alcatel ourServicesContainerProps">
+                        <div class="alcatel ourServicesContainerProps" style="width: 100%">
                             <img src="images/processCover.png" width="99%" height="240px" class="ourProcessImgProps">
                             <div class="padding40 ourProcessContentProps">
                                 <p class="font18 bold"> Our Process</p>
@@ -228,7 +228,7 @@
                     </div>
                     <ul id="ourProcessList">
                         <li class="ourProcessListItem">Few of the donors have expressed interest in doing ‘Godanam’ (Donating a Cow). We have identified 3 prospective farmers who are able to use the cow for natural farming – please contact us if you are interested.</li>
-                        <li class="ourProcessListItem">We have identified 12 new prospective and needy farmers that need your continued support.</li>
+                        <li class="ourProcessListItem">We have identified 12 new prospective and needy farmers that need your continued support. Please find the detailed Farmer’s support review document from Operations team here.</li>
                     </ul>
                     <div class="margintop40 customCenter">
                         <div id="ourFarmersContainer" class="alcatel ourServicesContainerProps">
@@ -339,6 +339,71 @@
             </div>
         </div>
         <!--Parallax stats section ends here -->
+
+        <div id="footer"> 
+            <div class="row" style="position:relative;margin-top:8px;margin-bottom: -20px">
+                <div style="cursor:pointer;position: absolute; top:-40px;height:80px;width: 80px;border-radius:50px;background-image:radial-gradient(#52c234,#061700);left:50%;margin-left:-25px;box-shadow: 0px 0px 3px 4px grey,0px 0px 0px 10px white;z-index: 2">
+                    <p onclick="dummy()" style="color:white;text-align: center;margin-top:35%;font-weight: bold;">Donate</p>
+                </div>
+                <div class="row">
+                    <div class="col l6 m6 s12" style="padding-top: 50px">
+                        <div class="container">
+                            <div style="display: flex;color:white;align-items: center;">
+                                <span style="z-index: 2">
+                                    <i class="material-icons">location_on</i>
+                                </span>
+                                <span class="font18 bold center" style="color:white;z-index: 2">
+                                    <pre>  19216 Robin Perch Ln, Tampa FL 33647</pre>
+                                </span>
+                            </div>
+                            <div style="display: flex;color:white;align-items: center;z-index: 2">
+                                <span style="z-index: 2">
+                                    <i class="material-icons">email</i>
+                                </span>
+                                <span class="font18 bold center" style="color:white;z-index: 2">
+                                    <pre>  volunteers@adoptfarmer.org</pre>
+                                </span>
+                            </div>
+                            <div style="display: flex;color:white;align-items: center;z-index: 2">
+                                <span style="z-index: 2">
+                                    <i class="material-icons">local_phone</i>
+                                </span>
+                                <span class="font18 bold center" style="color:white;z-index: 2">
+                                    <pre>  (813)-444-7635</pre>
+                                </span>
+                            </div>
+                            <div class="container margintop20">
+                                <div style="display: flex;justify-content: space-evenly;">
+                                    <img style="z-index: 2" src="./images/facebook.png" height="30px" width="30px">
+                                    <img style="z-index: 2" src="./images/paypal.png" height="30px" width="30px">
+                                    <img style="z-index: 2" src="./images/gmail.png" height="30px" width="30px">
+                                    <img style="z-index: 2" src="./images/whatsapp.png" height="30px" width="30px">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col l6 m6 s12 paddingTop50" style="padding-top: 50px">
+                        <div class="container">
+                            <div style="height:40px;background-color:white;border:2px solid whitesmoke;width:60%;position:relative;z-index: 2;border-radius: 10px;">
+                                <p contenteditable="true" id="username" name="Name" class="customInput" style="color:grey;font-family:fantasy;padding-left:10px;height:inherit;margin-top:0px;padding-top:8px;">Name</p>
+                            </div>
+                            <div class="margintop20" style="height:40px;background-color:white;border:2px solid whitesmoke;width:80%;position:relative;z-index: 2;border-radius: 10px;">
+                                    <p contenteditable="true" id="email" name="Email" class="customInput" style="color:grey;font-family:fantasy;padding-left:10px;height:inherit;margin-top:0px;padding-top:8px;">Email</p>
+                            </div>
+                            <div class="margintop20" style="height:100px;background-color:white;border:2px solid whitesmoke;width:90%;position:relative;z-index: 2;overflow: scroll;border-radius: 10px;">
+                                <p contenteditable="true" id="comment" name="Type your comments here....." class="customInput" style="color:grey;font-family:fantasy;padding-left:10px;height:inherit;margin-top:0px;padding-top:8px;">Type your comments here.....</p>
+                            </div>
+                            <div class="center margintop20">
+                                <a id="commentBtn" style="z-index: 2;position: relative;" href="#" class="waves-effect waves-light btn center">Submit</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col l12 m12 s12 center">
+                        <p style="z-index:2;color:white;position: relative;">© COPYRIGHT 2017 ADOPTFARMER.ORG</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <script id="eventsLoader" type="text/x-handlebars-template">
             {{#each events}}
