--- a/index.html
+++ b/index.html
@@ -19,38 +19,22 @@
 
         <!--Advertiser Header starts here-->
         <div class="row headergradient paddingBottom20">
-            <div class="col l3 m12 s12 center">
-                <img class="margintop10" src="./images/logo.png" height="80px">
+            <div class="col l3 m4 s8 left-align">
+                <img class="margintop10" src="./images/logo.png" height="100px" >
             </div>
-            <div class="col l3 m6 s12 center">
-                <span>
-                    <img class="iconBorder padding5 margintop20" src="images/svg/address1.svg" height="50px">
-                </span>
-                <span class="font18 bold wrap center relative top-20 left5">
-                    19216 Robin Perch Ln, Tampa FL 33647
-                </span>
-            </div>
-            <div class="col l3 m6 s12 center">
-                <span>
-                    <img class="iconBorder padding5 margintop20" src="images/svg/envelope.svg" height="50px">
-                </span>
-                <span class="font18 bold wrap center relative top-20 left5">
-                     volunteers@adoptfarmer.org
-                </span>
-            </div>
-            <div class="col l3 m12 s12 center marginBotton30">
-                <span>
-                    <img class="iconBorder padding5 margintop20" src="images/svg/phone.svg" height="50px">
-                </span>
-                <span class="font18 bold wrap center relative top-20 left5">
-                    (813)-444-7635
-                </span>
+            <div class="col l9 m8 s4">
+                <div style="display: flex;justify-content: flex-end;margin-top:10px">
+                    <div style="display: flex;justify-content: space-around;width: 200px;">
+                        <a href="https://www.facebook.com/AdoptFarmer/" target="_blank"><img class="iconBorder padding5 margintop20" src="images/svg/facebook.svg" height="50px"></a>
+                        <a href="mailto:volunteers@adoptfarmer.org?subject=Adopt%20Farmer"><img class="iconBorder padding5 margintop20" src="images/svg/envelope.svg" height="50px"></a>
+                    </div>
+                </div>
             </div>
         </div>
         <!--Advertiser Header ends here-->
 
         <!--Mobile Header starts here-->
-        <div id="mobileHeader" class="flex hide" style="background-color: white;opacity: 0.95;">
+        <div id="mobileHeader" class="flex hide" style="background-color: white;opacity: 0.95;box-shadow: 0px 1px 10px 0px grey;">
                 <p name="Mission" class="font18 headerText">Mission</p>
                 <p name="Process" class="font18 headerText">Process</p>
                 <p name="Farmer" class="font18 headerText">Farmer</p>
@@ -62,7 +46,7 @@
 
         <!--medium and desktop header starts here-->
         <div class="container" id="header2">
-            <div class="flex blackBackground whiteText roundedCorners relative top-50 zindex1" style="flex-wrap: wrap">
+            <div class="flex blackBackground whiteText roundedCorners relative top-60 zindex1" style="flex-wrap: wrap">
                 <p name="Mission" class="font18 headerText">Mission</p>
                 <p name="Process" class="font18 headerText">Process</p>
                 <p name="Farmer"class="font18 headerText">Farmer</p>
